apps/kubernetes-dashboard-cert/cert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    name: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: "1000000m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # cluster issuer
spec:
  tls:
  - hosts:
    - dashboard.k8s.megabrain.kr # domain
    secretName: k8s-dashboard-tls # secret name
  rules:
  - host: dashboard.k8s.megabrain.kr # domain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
